--- a/examples/cv/01_education.tex
+++ b/examples/cv/01_education.tex
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
 \cventry
-    {Doctor of Philosophy \newline Master of Philosophy \newline Master of Arts} % Degree
+    {Doctor of Philosophy \newline Master of Arts} % Degree
     {\href{http://polisci.columbia.edu/}{Political Science Department}, \href{http://www.columbia.edu/}{Columbia University}} % Institution
     {New York, NY, US} % Location
-    {Sep. 2014 - PRESENT \newline Sep. 2014 - PRESENT \newline Sep. 2014 - Oct. 2016} % Date(s)
+    {Sep. 2014 - PRESENT \newline Sep. 2014 - Oct. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Major: \emph{Comparative Politics}}
