--- a/examples/cv/02_publications.tex
+++ b/examples/cv/02_publications.tex
@@ -114,4 +114,37 @@
     }
 
 %---------------------------------------------------------
+  \cventry
+    {G.~Syunyaev} % Role
+    {Winning or Learning: When Strength of Opposition Presents a Dilemma to Autocrat} % Title
+    {Draft} % Location
+    {2017} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+\end{cventries}
+
+\cvsubsection{Work in Progress}
+%-------------------------------------------------------------------------------
+%   CONTENT
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {A.~Wilke, T.~Leavitt, G.~Syunyaev} % Role
+    {Improving Service Delivery Through Citizens Online Feedback} % Title
+    {Project} % Location
+    {2017} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
 \end{cventries}
