--- a/examples/cv/06_grants.tex
+++ b/examples/cv/06_grants.tex
@@ -17,16 +17,30 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Travel Grant of the Department of Political Science} % Award
+    {Government Initiative Travel Grant (with Anna~Wilke and Thomas~Leavitt)} % Award
+    {\href{http://polisci.columbia.edu/}{J-PAL}} % Event
+    {Cambridge, MA} % Location
+    {2017} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Dissertation Development Grant} % Award
     {\href{http://polisci.columbia.edu/}{Department of Political Science, Columbia University}} % Event
-    {New York, NY, US} % Location
+    {New York, NY} % Location
+    {2017} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Travel Grant} % Award
+    {\href{http://polisci.columbia.edu/}{Department of Political Science, Columbia University}} % Event
+    {New York, NY} % Location
     {2016} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
     {Dean's Fellowship} % Award
     {\href{http://gsas.columbia.edu/content/fellowship-categories}{Graduate School of Arts and Sciences, Columbia University}} % Event
-    {New York, NY, US} % Location
+    {New York, NY} % Location
     {2014} % Date(s)
 
 %---------------------------------------------------------
@@ -48,7 +62,7 @@
     {Travel Grants of NRU HSE for Participation in 5 Academic Conferences} % Award
     {\href{http://www.hse.ru/en/}{NRU HSE}} % Event
     {Moscow, Russia} % Location
-    {2010-2014} % Date(s)
+    {2010--2014} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
