--- a/examples/cv/02_publications.tex
+++ b/examples/cv/02_publications.tex
@@ -137,7 +137,7 @@
 %---------------------------------------------------------
   \cventry
     {A.~Wilke, T.~Leavitt, G.~Syunyaev} % Role
-    {Improving Service Delivery Through Citizens Online Feedback} % Title
+    {The Effects of Internet Access on Political Opinions and Behavior} % Title
     {Project} % Location
     {2017} % Date(s)
     {
