--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -56,8 +56,8 @@
 %-------------------------------------------------------------------------------
 \name{Georgiy}{Syunyaev}
 
-\position{\vspace{0.2cm} PhD Student {\enskip\cdotp\enskip} Political Science}
-\address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
+\position{\vspace{0.2cm} PhD Candidate {\enskip\cdotp\enskip} Political Science}
+\address{166 Weirfield Str., Apt. 3, Brooklyn, NY, 11221, US}
 
 \mobile{+1 (917) 873-68-72}
 \email{g.syunyaev@columbia.edu}
