--- a/examples/cv/01_education.tex
+++ b/examples/cv/01_education.tex
@@ -11,14 +11,15 @@
 
 %---------------------------------------------------------
 \cventry
-    {Doctor of Philosophy \newline Master of Arts} % Degree
+    {PhD Candidate \newline Master of Arts \newline Master of Philosophy} % Degree
     {\href{http://polisci.columbia.edu/}{Political Science Department}, \href{http://www.columbia.edu/}{Columbia University}} % Institution
     {New York, NY, US} % Location
-    {Sep. 2014 - PRESENT \newline Sep. 2014 - Oct. 2016} % Date(s)
+    {Oct. 2017 - PRESENT \newline Sep. 2014 - Oct. 2016 \newline Sep. 2014 - Oct. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Major: \emph{Comparative Politics}}
         \item {Minor: \emph{Political Economy}}
+        \item {Dissertation Topic: \emph{Controlled Confusion: Manipulation of Public Attribution of Responsibilities in Decentralized Autocracies}}
       \end{cvitems}
     }
 
