--- a/examples/cv/02_publications.tex
+++ b/examples/cv/02_publications.tex
@@ -91,10 +91,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {E.~Borisova, T.~Frye, G.~Syunyaev} % Role
-    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Title
+    {A.~Rozenas, D.~Stukal, G.~Syunyaev} % Role
+    {Persuasion Through Propaganda: Experimental Evidence from Russia} % Title
     {Draft} % Location
-    {2016} % Date(s)
+    {2018} % Date(s)
     {
         % \begin{cvitems} % Description(s)
         %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
@@ -103,8 +103,8 @@
 
 %---------------------------------------------------------
   \cventry
-    {T.~Leavitt, G.~Syunyaev} % Role
-    {An Exact, Distribution-Free Method for Addressing Attrition Bias in Randomized Experiments} % Title
+    {E.~Borisova, T.~Frye, G.~Syunyaev} % Role
+    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Title
     {Draft} % Location
     {2016} % Date(s)
     {
@@ -133,6 +133,54 @@
 %   CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {M.~Ting, A.~Wilke, G.~Syunyaev} % Role
+    {Federalism and Ideology} % Title
+    {Project} % Location
+    {2018} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Model the effects of media capture on allocation of responsibility for public policy in non-dmocracies}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {G.~Syunyaev} % Role
+    {Blame-Shifting in Autocracies} % Title
+    {Project} % Location
+    {2018} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Model the effects of media capture on allocation of responsibility for public policy in non-dmocracies}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {G.~Syunyaev} % Role
+    {Controlled Confusion: An Experiment on Manipulation of Public Attribution of Responsibilities in Decentralized Autocracies} % Title
+    {Project} % Location
+    {2018} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Model the effects of media capture on allocation of responsibility for public policy in non-dmocracies}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {T.~Leavitt, G.~Syunyaev} % Role
+    {An Exact, Distribution-Free Method for Addressing Attrition Bias in Randomized Experiments} % Title
+    {Project} % Location
+    {2017} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
