--- a/examples/cv/06_grants.tex
+++ b/examples/cv/06_grants.tex
@@ -16,9 +16,23 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
+\cvhonor
+    {Dissertation Fellowship} % Award
+    {\href{http://gsas.columbia.edu/content/fellowship-categories}{Graduate School of Arts and Sciences, Columbia University}} % Event
+    {Cambridge, MA} % Location
+    {2018--2019} % Date(s)
+
+%---------------------------------------------------------
+\cvhonor
+    {Research Transparency and Reproducibility Fellowship} % Award
+    {\href{https://www.povertyactionlab.org/rt}{J-PAL, MIT}} % Event
+    {Cambridge, MA} % Location
+    {2017--2018} % Date(s)
+
+%---------------------------------------------------------
   \cvhonor
-    {Government Initiative Travel Grant (with Anna~Wilke and Thomas~Leavitt)} % Award
-    {\href{http://polisci.columbia.edu/}{J-PAL}} % Event
+    {Governance Initiative Travel Grant (with Anna~Wilke and Thomas~Leavitt)} % Award
+    {\href{https://www.povertyactionlab.org/GI}{J-PAL, MIT}} % Event
     {Cambridge, MA} % Location
     {2017} % Date(s)
 
@@ -34,7 +48,7 @@
     {Travel Grant} % Award
     {\href{http://polisci.columbia.edu/}{Department of Political Science, Columbia University}} % Event
     {New York, NY} % Location
-    {2016} % Date(s)
+    {2016,2017} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
