--- a/examples/cv/08_conferences.tex
+++ b/examples/cv/08_conferences.tex
@@ -11,6 +11,45 @@
 
 %---------------------------------------------------------
   \cventry
+    {Authors: A.~Rozena, D.~Stukal, G.~Syunyaev} % Authors
+    {Persuasion Through Propaganda: Experimental Evidence from Russia} % Project
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {\textbf{APSA 2018}: 114th APSA Annual Meeting \& Exhibition, Boston, MA, USA, August~30--September~2, 2018}
+        \item {\textbf{Carnegie Russia Workshop}: Columbia-NYU Carnegie Russia Workshop, New York, NY, USA, September~20, 2018}
+        \item {\textbf{CREECA Young Scholars Conference}: Wisconsin Russia Project's Summer 2018 Young Scholars Conference, UW-Madison, Madison, WI, USA, July~26--27, 2018}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {A.~Wilke, T.~Leavitt, G.~Syunyaev} % Role
+    {The Effects of Internet Access on Political Opinions and Behavior} % Title
+    {Project} % Location
+    {2017} % Date(s)
+    {
+        \begin{cvitems} % Description(s)
+          \item {\textbf{PED Research Workshop}: Political Economy of Development Research Workshop, WZB, Berlin, Germany, December~15--16, 2017}
+        \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Authors: E.~Borisova, T.~Frye, G.~Syunyaev} % Authors
+    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Project
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {\textbf{SSDS 2016}: Seminar for the Study of Development Strategies (Internal Weeks), New York, USA, April, 2016}
+        \item {\textbf{APSA 2016}: American Political Science Association Annual Meeting, Philadelphia, USA, September~1--4, 2016}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Authors: G.~Syunyaev, L.~Polishchuk} % Authors
     {Ruling Elites' Rotation and Asset Ownership: Implications for Property Rights} % Project
     {} % Location
@@ -39,19 +78,6 @@
         \item {\textbf{RSSIA 2013}: Russian Summer School for Institutional Aanalysis, Moscow, Russian Federation, June~29 -- July~5, 2013}
         \item {\textbf{IACESD 2012}: XIII April International Academic Conference on Economic and Social Development, Moscow, Russian Federation, April~3--5, 2012}
         \item {\textbf{IACESD 2011}: XII April International Academic Conference on Economic and Social Development, Moscow, Russian Federation, April~5--7, 2011}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Authors: E.~Borisova, T.~Frye, G.~Syunyaev} % Authors
-    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Project
-    {} % Location
-    {} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {\textbf{SSDS 2016}: Seminar for the Study of Development Strategies (Internal Weeks), New York, USA, April, 2016}
-        \item {\textbf{APSA 2016}: American Political Science Association Annual Meeting, Philadelphia, USA, September~1--4, 2016}
       \end{cvitems}
     }
 
