--- a/examples/resume/grants.tex
+++ b/examples/resume/grants.tex
@@ -17,6 +17,13 @@
 
 %---------------------------------------------------------
   \cvhonor
+    {Research Transparency and Reproducibility Fellowship} % Award
+    {\href{https://www.povertyactionlab.org/rt}{The Abdul Latif Jameel Poverty Action Lab (J-PAL)}} % Event
+    {Boston, MA, US} % Location
+    {2017--2018} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
     {Dean's Fellowship} % Award
     {\href{http://www.columbia.edu/}{Columbia University}} % Event
     {New York, NY, US} % Location
