--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
 \cvskill
     {Methodology} % Category
-    {Formal Political Economy, Experimental Research, Bayesian Statistics, Causal Inferece}
+    {Formal Political Economy, Experimental Research, Bayesian Statistics, Causal Inference}
 
 %---------------------------------------------------------
 \cvskill
